--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
-name = "elastic-rs-codegen"
+name = "elastic_codegen"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+
+[features]
 
 [dependencies]
 serde = "*"
 serde_json = "*"
 serde_macros = "*"
-regex = "*"
+aster = "*"
