--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "elastic_codegen"
+name = "elastic"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
@@ -7,7 +7,8 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 serde = "*"
 serde_json = "*"
 serde_macros = "*"
-aster = "*"
+rotor = "*"
+chomp = "*"
 
 [dependencies.elastic_types]
 path = "../types"
