--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
-name = "elastic"
+name = "elastic_types"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
+chrono = "*"
+serde = "*"
+serde_json = "*"
+serde_macros = "*"
+chomp = "*"
