--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ env:
   global:
     - LD_LIBRARY_PATH: /usr/local/lib
 script:
+  - cd types
+  - cargo build -v
+  - cargo test -v
+  - cargo doc
+  - cd ../codegen
   - cargo build -v
   - cargo test -v
   - cargo doc
