--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: rust
+rust:
+  - stable
+  - beta
+  - nightly
 os:
   - linux
   - osx
+  - windows
 env:
   global:
     - LD_LIBRARY_PATH: /usr/local/lib
