--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,7 @@ install:
   - cargo -vV
 build: false
 test_script:
-  - cd types
+  - ps: cd types
   - cargo test --verbose
-  - cd ../codegen
+  - ps: cd ../codegen
   - cargo test --verbose
