--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 serde = "*"
 serde_json = "*"
 serde_macros = "*"
+aster = "*"
 chomp = "*"
 
 [dependencies.elastic_types]
