--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -8,6 +8,4 @@ chrono = "*"
 serde = "*"
 serde_json = "*"
 serde_macros = "*"
-
-[dependencies.elastic_types_codegen]
-path = "../types_codegen"
+elastic_types_codegen = { version = "*", path = "../types_codegen" }
