--- a/types_codegen/Cargo.toml
+++ b/types_codegen/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 [lib]
 name = "elastic_types_codegen"
 crate_type = ["dylib"]
+plugin = true
 
 [dependencies]
 chrono = "*"
