mocking out client impls

--- a/dev/es_benches/Cargo.toml
+++ b/dev/es_benches/Cargo.toml
@@ -8,4 +8,6 @@ serde = "*"
 serde_json = "*"
 serde_macros = "*"
 hyper = "*"
+rs-es = "*"
+stopwatch = "*"
 elastic_types_codegen = { version = "*", path = "../../types_codegen" }
