adding initial rotor bench

--- a/dev/es_benches_rust/Cargo.toml
+++ b/dev/es_benches_rust/Cargo.toml
@@ -8,5 +8,8 @@ serde = "*"
 serde_json = "*"
 serde_macros = "*"
 hyper = "*"
+time = "*"
+rotor = "*"
+rotor-http = { git = "https://github.com/tailhook/rotor-http.git" }
 rs-es = "*"
 elastic_types_codegen = { version = "*", path = "../../types_codegen" }
