--- a/hyper/Cargo.toml
+++ b/hyper/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [features]
-codegen = ["elastic_codegen", "aster", "chomp"]
+codegen = ["elastic_codegen", "aster", "scan_dir"]
 
 [dependencies]
 aster = { version = "*", optional = true }
 elastic_codegen = { version = "*", path = "../codegen", optional = true }
-chomp = { version = "*", optional = true }
+scan_dir = { version = "*", optional = true }
