--- a/hyper/Cargo.toml
+++ b/hyper/Cargo.toml
@@ -3,5 +3,12 @@ name = "elastic_hyper"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
+[features]
+test-integration = [ "elastic_macros", "serde", "serde_macros", "serde_json" ]
+
 [dependencies]
 hyper = "*"
+elastic_macros = { version = "*", path = "../macros", optional = true }
+serde = { version = "*", optional = true }
+serde_macros = { version = "*", optional = true }
+serde_json = { version = "*", optional = true }
