--- a/hyper/Cargo.toml
+++ b/hyper/Cargo.toml
@@ -2,13 +2,17 @@
 name = "elastic_hyper"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+license = "Apache-2.0"
+description = "A lightweight implementation of the Elasticsearch API based on Hyper."
+documentation = "http://kodraus.github.io/rustdoc/elastic_hyper/"
+repository = "https://github.com/KodrAus/elasticsearch-rs"
 
 [features]
 test-integration = [ "elastic_macros", "serde", "serde_macros", "serde_json" ]
 
 [dependencies]
-hyper = "*"
-elastic_macros = { version = "*", path = "../macros", optional = true }
-serde = { version = "*", optional = true }
-serde_macros = { version = "*", optional = true }
-serde_json = { version = "*", optional = true }
+hyper = "~0.7.2"
+elastic_macros = { version = "0.1.0", optional = true }
+serde = { version = "~0.7.0", optional = true }
+serde_macros = { version = "~0.7.0", optional = true }
+serde_json = { version = "~0.7.0", optional = true }
