--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -2,6 +2,10 @@
 name = "elastic_macros"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+license = "Apache-2.0"
+description = "Compile-time code generation for Elasticsearch type implementations."
+documentation = "http://kodraus.github.io/rustdoc/elastic_macros/"
+repository = "https://github.com/KodrAus/elasticsearch-rs"
 
 [lib]
 name = "elastic_macros"
@@ -9,7 +13,7 @@ crate_type = ["dylib"]
 plugin = true
 
 [dependencies]
-chrono = "*"
-serde = "*"
-serde_json = "*"
-serde_macros = "*"
+chrono = "~0.2.20"
+serde = "~0.7.0"
+serde_json = "~0.7.0"
+serde_macros = "~0.7.0"
