--- a/hyper/samples/Cargo.toml
+++ b/hyper/samples/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
+elastic_hyper = "*"
+elastic_macros = "*"
 hyper = "*"
-elastic_hyper = { version = "*", path = "../../hyper" }
-elastic_macros = { version = "*", path = "../../macros" }
-serde = { version = "*" }
-serde_macros = { version = "*" }
-serde_json = { version = "*" }
+serde = "*"
+serde_macros = "*"
+serde_json = "*"
