--- a/hyper/Cargo.toml
+++ b/hyper/Cargo.toml
@@ -1,18 +1,19 @@
 [package]
 name = "elastic_hyper"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A lightweight implementation of the Elasticsearch API based on Hyper."
 documentation = "http://kodraus.github.io/rustdoc/elastic_hyper/"
 repository = "https://github.com/KodrAus/elasticsearch-rs"
+exclude = ["samples"]
 
 [features]
 test-integration = [ "elastic_macros", "serde", "serde_macros", "serde_json" ]
 
 [dependencies]
 hyper = "~0.7.2"
-elastic_macros = { version = "0.1.0", optional = true }
 serde = { version = "~0.7.0", optional = true }
 serde_macros = { version = "~0.7.0", optional = true }
 serde_json = { version = "~0.7.0", optional = true }
+elastic_macros = { version = "0.1.1", optional = true }
