--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_macros"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "Compile-time code generation for Elasticsearch type implementations."
@@ -12,8 +12,13 @@ name = "elastic_macros"
 crate_type = ["dylib"]
 plugin = true
 
+[features]
+types = [ "chrono" ]
+nightly-testing = [ "clippy" ]
+
 [dependencies]
-chrono = "~0.2.20"
+chrono = { version = "~0.2.20", optional = true }
 serde = "~0.7.0"
 serde_json = "~0.7.0"
 serde_macros = "~0.7.0"
+clippy = { version = "*", optional = true }
