--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -21,4 +21,4 @@ chrono = { version = "~0.2.20", optional = true }
 serde = "~0.7.0"
 serde_json = "~0.7.0"
 serde_macros = "~0.7.0"
-clippy = { version = "*", optional = true }
+clippy = { version = "^0.*", optional = true }
