--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -22,3 +22,8 @@ serde = "~0.7.0"
 serde_json = "~0.7.0"
 serde_macros = "~0.7.0"
 clippy = { version = "^0.*", optional = true }
+
+[dependencies.json_macros]
+version = "^0.3"
+default-features = false
+features = ["with-serde"]
