--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,8 @@ script:
   - cd ../codegen
   - cargo test -v
   - cargo doc
+  - cd ../hyper
+  - cargo build -v
+  - cargo doc
+  - cd codegen
+  - cargo build -v
