--- a/hyper/Cargo.toml
+++ b/hyper/Cargo.toml
@@ -17,3 +17,6 @@ serde = { version = "~0.7.0", optional = true }
 serde_macros = { version = "~0.7.0", optional = true }
 serde_json = { version = "~0.7.0", optional = true }
 elastic_macros = { version = "0.1.3", optional = true }
+
+[dependencies.url]
+git = "https://github.com/servo/rust-url"
