--- a/hyper/Cargo.toml
+++ b/hyper/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_hyper"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A lightweight implementation of the Elasticsearch API based on Hyper."
@@ -17,6 +17,4 @@ serde = { version = "~0.7.0", optional = true }
 serde_macros = { version = "~0.7.0", optional = true }
 serde_json = { version = "~0.7.0", optional = true }
 elastic_macros = { version = "0.1.3", optional = true }
-
-[dependencies.url]
-git = "https://github.com/servo/rust-url"
+url = "0.5.7"
