--- a/hyper/samples/Cargo.toml
+++ b/hyper/samples/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 [dependencies]
 elastic_hyper = "*"
 elastic_macros = "*"
-hyper = "*"
+hyper = "0.7.2"
 serde = "*"
 serde_macros = "*"
 serde_json = "*"
