--- a/hyper/Cargo.toml
+++ b/hyper/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_hyper"
-version = "0.1.4"
+version = "0.1.5"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A lightweight implementation of the Elasticsearch API based on Hyper."
@@ -12,9 +12,9 @@ exclude = [ "samples", "codegen" ]
 test-integration = [ "elastic_macros", "serde", "serde_macros", "serde_json" ]
 
 [dependencies]
-hyper = "~0.7.2"
+hyper = "~0.8.0"
 serde = { version = "~0.7.0", optional = true }
 serde_macros = { version = "~0.7.0", optional = true }
 serde_json = { version = "~0.7.0", optional = true }
-elastic_macros = { version = "0.1.3", optional = true }
-url = "0.5.7"
+elastic_macros = { version = "0.1.4", optional = true }
+url = "~0.5.7"
