--- a/benches/csharp/Elasticsearch.Net.Bench/project.json
+++ b/benches/csharp/Elasticsearch.Net.Bench/project.json
@@ -6,17 +6,11 @@
   "projectUrl": "",
   "licenseUrl": "",
   "compilationOptions": {
-    "emitEntryPoint": true 
+    "emitEntryPoint": true
   },
   "frameworks": {
-    "dotnet5.4": {
+    "dnx451": {
       "dependencies": {
-        "System.Console": "4.0.0-beta-23516",
-        "Microsoft.CSharp": "4.0.1-beta-23516",
-        "System.Collections": "4.0.11-beta-23516",
-        "System.Linq": "4.0.1-beta-23516",
-        "System.Runtime": "4.0.21-beta-23516",
-        "System.Threading": "4.0.11-beta-23516"
       }
     }
   },
