--- a/benches/rust/elastic_hyper_raw/Cargo.toml
+++ b/benches/rust/elastic_hyper_raw/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "elastic_hyper_fltrd_bench"
+name = "elastic_hyper_raw_bench"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
-serde = "*"
-serde_json = "*"
-serde_macros = "*"
 hyper = "*"
 elastic_hyper = "*"
 elastic_macros = "*"
