--- a/hyper/samples/Cargo.toml
+++ b/hyper/samples/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
 elastic_hyper = "*"
-elastic_macros = "*"
+json_str = "*"
 hyper = "0.8.0"
 serde = "*"
 serde_macros = "*"
