--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,53 +1,63 @@
 [package]
 name = "elastic_types"
-version = "0.1.4"
+version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+license = "Apache-2.0"
+description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
+documentation = "http://kodraus.github.io/rustdoc/elastic_types/"
+repository = "https://github.com/KodrAus/elasticsearch-rs"
 
 [features]
 default = [
-  "boolean_ty",
-  "date_ty",
-  "geo_ty",
-  "number_ty",
-  "response_ty",
-  "string_ty"
+  "boolean-ty",
+  "date-ty",
+  "geo-ty",
+  "number-ty",
+  "response-ty",
+  "string-ty"
 ]
-no_response_ty = [
-  "boolean_ty",
-  "date_ty",
-  "geo_ty",
-  "number_ty",
-  "string_ty"
+no-response-ty = [
+  "boolean-ty",
+  "date-ty",
+  "geo-ty",
+  "number-ty",
+  "string-ty"
 ]
-boolean_ty = []
-date_ty = [ "chrono" ]
-geo_ty = [ "geojson" ]
-number_ty = []
-response_ty = []
-string_ty = []
+boolean-ty = []
+date-ty = [
+  "chrono",
+  "elastic_date_macros"
+]
+geo-ty = [ "geojson" ]
+number-ty = []
+response-ty = []
+string-ty = []
 
 nightly-testing = [ "clippy" ]
 
 [dependencies]
-serde = "*"
-serde_json = "*"
-serde_macros = "*"
-
-[dependencies.clippy]
-version = "*"
-optional = true
+serde = "~0.7.0"
+serde_json = "~0.7.0"
+serde_macros = "~0.7.0"
+elastic_types_macros = "~0.1.0"
 
 [dependencies.chrono]
-version = "*"
+version = "~0.2.20"
 optional = true
 features = [ "serde" ]
 
+[dependencies.elastic_date_macros]
+version = "~0.2.0"
+optional = true
+
 [dependencies.geojson]
-version = "*"
+version = "~0.2.1"
 optional = true
 features = [ "with-serde" ]
 
-[dependencies.elastic_macros]
-version = "*"
-path = "../macros"
-features = [ "types" ]
+[dependencies.clippy]
+version = "^0.*"
+optional = true
+
+[dev-dependencies]
+json_str = "^0.*"
