make json_str support stable

--- a/benches/rust/elastic_hyper/Cargo.toml
+++ b/benches/rust/elastic_hyper/Cargo.toml
@@ -9,6 +9,6 @@ serde_json = "*"
 serde_macros = "*"
 hyper = "*"
 elastic_hyper = "*"
-json_str = "*"
+json_str = { version = "*", features = [ "nightly" ] }
 elastic_types = { version = "*", path = "../../../types" }
 "stopwatch" = "*"
