--- a/benches/rust/elastic_hyper_fltrd/Cargo.toml
+++ b/benches/rust/elastic_hyper_fltrd/Cargo.toml
@@ -9,5 +9,5 @@ serde_json = "*"
 serde_macros = "*"
 hyper = "*"
 elastic_hyper = "*"
-json_str = "*"
+json_str = { version = "*", features = [ "nightly" ] }
 "stopwatch" = "*"
