--- a/macros/json_str/Cargo.toml
+++ b/macros/json_str/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "json_str"
-version = "0.2.2"
+version = "0.2.3"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "Write json literals without ungainly strings."
@@ -13,7 +13,8 @@ crate_type = [ "dylib" ]
 plugin = true
 
 [features]
-nightly-testing = [ "clippy" ]
+nightly = []
+nightly-testing = [ "nightly", "clippy" ]
 
 [dependencies]
 clippy = { version = "^0.*", optional = true }
