--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -60,4 +60,4 @@ version = "^0.*"
 optional = true
 
 [dev-dependencies]
-json_str = "^0.*"
+json_str = { version = "^0.*", features = [ "nightly" ] }
