--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,64 +1,41 @@
 [package]
 name = "elastic_types"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
 documentation = "http://kodraus.github.io/rustdoc/elastic_types/"
 repository = "https://github.com/KodrAus/elasticsearch-rs"
+build = "build.rs"
 
 [features]
 default = [
-  "boolean-ty",
-  "date-ty",
-  "geo-ty",
-  "number-ty",
-  "response-ty",
-  "string-ty"
-]
-no-response-ty = [
-  "boolean-ty",
-  "date-ty",
-  "geo-ty",
-  "number-ty",
-  "string-ty"
-]
-no-ty = []
-boolean-ty = []
-date-ty = [
-  "chrono",
+  "serde_codegen",
   "elastic_date_macros"
 ]
-geo-ty = [ "geojson" ]
-number-ty = []
-response-ty = []
-string-ty = []
-
-nightly-testing = [ "clippy" ]
+nightly = [
+  "serde_macros",
+  "elastic_date_macros/nightly"
+]
+nightly-testing = [
+  "clippy",
+  "elastic_types_macros"
+]
 
 [dependencies]
 serde = "~0.7.0"
 serde_json = "~0.7.0"
-serde_macros = "~0.7.0"
-elastic_types_macros = { version = "*", path = "../macros/types" }
+serde_macros = { version = "*", optional = true }
+elastic_date_macros = { version = "~0.2.1", optional = true }
+chrono = { version = "~0.2.20", features = [ "serde" ] }
+geojson = { version = "~0.2.1", features = [ "with-serde" ] }
 
-[dependencies.chrono]
-version = "~0.2.20"
-optional = true
-features = [ "serde" ]
+clippy = { version = "^0.*", optional = true }
+elastic_types_macros = { version = "^0.*", optional = true }
 
-[dependencies.elastic_date_macros]
-version = "~0.2.0"
-optional = true
-
-[dependencies.geojson]
-version = "~0.2.1"
-optional = true
-features = [ "with-serde" ]
-
-[dependencies.clippy]
-version = "^0.*"
-optional = true
+[build-dependencies]
+serde_codegen = { version = "*", optional = true }
+syntex = "*"
 
 [dev-dependencies]
-json_str = { version = "^0.*", features = [ "nightly" ] }
+json_str = "^0.*"
