--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -18,6 +18,7 @@ nightly = [
   "elastic_date_macros/nightly"
 ]
 nightly-testing = [
+  "nightly",
   "clippy",
   "elastic_types_macros"
 ]
@@ -31,7 +32,7 @@ chrono = { version = "~0.2.20", features = [ "serde" ] }
 geojson = { version = "~0.2.1", features = [ "with-serde" ] }
 
 clippy = { version = "^0.*", optional = true }
-elastic_types_macros = { version = "^0.*", optional = true }
+elastic_types_macros = { version = "^0.*", path = "../macros/types", optional = true }
 
 [build-dependencies]
 serde_codegen = { version = "*", optional = true }
