--- a/hyper/Cargo.toml
+++ b/hyper/Cargo.toml
@@ -9,12 +9,9 @@ repository = "https://github.com/KodrAus/elasticsearch-rs"
 exclude = [ "samples", "codegen" ]
 
 [features]
-test-integration = [ "json_str", "serde", "serde_macros", "serde_json" ]
+nightly-testing = [ "clippy" ]
 
 [dependencies]
-hyper = "~0.8.0"
-serde = { version = "~0.7.0", optional = true }
-serde_macros = { version = "~0.7.0", optional = true }
-serde_json = { version = "~0.7.0", optional = true }
-json_str = { version = "~0.2.0", optional = true }
+hyper = "~0.9.0"
 url = "~0.5.7"
+clippy = { version = "^0.*", optional = true }
