--- a/hyper/codegen/Cargo.toml
+++ b/hyper/codegen/Cargo.toml
@@ -3,6 +3,9 @@ name = "elastic_hyper_codegen"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
+[features]
+nightly-testing = []
+
 [dependencies]
 aster = { version = "*" }
 elastic_codegen = { version = "*", path = "../../codegen" }
