--- a/hyper/samples/Cargo.toml
+++ b/hyper/samples/Cargo.toml
@@ -3,6 +3,9 @@ name = "elastic_hyper_samples"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
+[features]
+nightly-testing = []
+
 [dependencies]
 elastic_hyper = "*"
 json_str = "*"
