--- a/.travis.yml
+++ b/.travis.yml
@@ -7,28 +7,31 @@ addons:
       - libelf-dev
       - libdw-dev
       - binutils-dev # optional: only required for the --verify flag of coveralls
-rust:
-  - nightly
-  - stable
+
 matrix:
-  exclude:
+  include:
     - rust: stable
       env:
         matrix:
+          - CRATE="hyper"
+          - CRATE="hyper/samples"
+          - CRATE="macros/date"
+          - CRATE="macros/json_str"
+          - CRATE="types"
+    - rust: nightly
+      env:
+        matrix:
           - CRATE="codegen"
+          - CRATE="hyper"
           - CRATE="hyper/codegen"
+          - CRATE="hyper/samples"
+          - CRATE="macros/date"
+          - CRATE="macros/types"
+          - CRATE="macros/json_str"
+          - CRATE="types"
 env:
   global:
     - TRAVIS_CARGO_NIGHTLY_FEATURE=""
-  matrix:
-    - CRATE="codegen"
-    - CRATE="hyper"
-    - CRATE="hyper/codegen"
-    - CRATE="hyper/samples"
-    - CRATE="macros/date"
-    - CRATE="macros/types"
-    - CRATE="macros/json_str"
-    - CRATE="types"
 
 before_script:
   - |
