--- a/hyper/samples/Cargo.toml
+++ b/hyper/samples/Cargo.toml
@@ -9,7 +9,4 @@ nightly-testing = []
 [dependencies]
 elastic_hyper = "*"
 json_str = "*"
-hyper = "0.8.0"
-serde = "*"
-serde_macros = "*"
-serde_json = "*"
+hyper = "~0.8.0"
