--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -9,27 +9,55 @@ repository = "https://github.com/KodrAus/elasticsearch-rs"
 build = "build.rs"
 
 [features]
-default = [
-  "serde_codegen",
-  "elastic_date_macros"
+stable = [
+  "serde_codegen"
 ]
 nightly = [
-  "serde_macros",
-  "elastic_date_macros/nightly"
+  "serde_macros"
+]
+default = [
+  "stable",
+  "date-ty"
+]
+nightly-default = [
+  "nightly",
+  "date-ty-nightly"
 ]
 nightly-testing = [
-  "nightly",
+  "nightly-default",
   "clippy",
   "elastic_types_macros"
+]
+
+date-ty = [
+  "chrono",
+  "elastic_date_macros"
+]
+date-ty-nightly = [
+  "chrono",
+  "elastic_date_macros/nightly"
+]
+
+geo-ty = [
+  "geo",
+  "geohash",
+  "geojson"
+]
+geo-ty-nightly = [
+  "geo-ty"
 ]
 
 [dependencies]
 serde = "~0.7.0"
 serde_json = "~0.7.0"
 serde_macros = { version = "*", optional = true }
+
+chrono = { version = "~0.2.20", optional = true, features = [ "serde" ] }
 elastic_date_macros = { version = "~0.2.1", optional = true }
-chrono = { version = "~0.2.20", features = [ "serde" ] }
-geojson = { version = "~0.2.1", features = [ "with-serde" ] }
+
+geo = { version = "~0.0.7", optional = true }
+geohash = { version = "~0.2.6", optional = true }
+geojson = { version = "~0.2.1", optional = true, features = [ "with-serde" ] }
 
 clippy = { version = "^0.*", optional = true }
 elastic_types_macros = { version = "^0.*", path = "../macros/types", optional = true }
