work on geopoint mapping

--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -17,11 +17,13 @@ nightly = [
 ]
 default = [
   "stable",
-  "date-ty"
+  "date-ty",
+  "geo-ty"
 ]
 nightly-default = [
   "nightly",
-  "date-ty-nightly"
+  "date-ty-nightly",
+  "geo-ty-nightly"
 ]
 nightly-testing = [
   "nightly-default",
