ignore geo types

--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -17,13 +17,11 @@ nightly = [
 ]
 default = [
   "stable",
-  "date-ty",
-  "geo-ty"
+  "date-ty"
 ]
 nightly-default = [
   "nightly",
-  "date-ty-nightly",
-  "geo-ty-nightly"
+  "date-ty-nightly"
 ]
 nightly-testing = [
   "nightly-default",
