set features on win build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,18 +14,18 @@ build: false
 test_script:
   - ps: cd macros
   - ps: cd json_str
-  - cargo test --verbose
+  - cargo test --verbose --features nightly-testing --no-default-features
   - ps: cd ../types
-  - cargo test --verbose
+  - cargo test --verbose --features nightly-testing --no-default-features
   - ps: cd ../date
-  - cargo test --verbose
+  - cargo test --verbose --features nightly-testing --no-default-features
   - ps: cd ../../types
-  - cargo test --verbose
+  - cargo test --verbose --features nightly-testing --no-default-features
   - ps: cd ../codegen
-  - cargo test --verbose
+  - cargo test --verbose --features nightly-testing --no-default-features
   - ps: cd ../hyper
-  - cargo build --verbose
+  - cargo build --verbose --features nightly-testing --no-default-features
   - ps: cd samples
-  - cargo build --verbose
+  - cargo build --verbose --features nightly-testing --no-default-features
   - ps: cd ../codegen
-  - cargo build --verbose
+  - cargo build --verbose --features nightly-testing --no-default-features
