--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -33,12 +33,12 @@ geojson = { version = "~0.2.1", features = [ "with-serde" ] }
 
 elastic_date_macros = { version = "~0.2.1", optional = true }
 clippy = { version = "^0.*", optional = true }
-serde_macros = { version = "*", optional = true }
-elastic_types_macros = { version = "^0.*", path = "../macros/types", optional = true }
+serde_macros = { version = "~0.7.0", optional = true }
+elastic_types_macros = { version = "~0.2", optional = true }
 
 [build-dependencies]
-serde_codegen = { version = "*", optional = true }
-syntex = "*"
+serde_codegen = { version = "^0.*", optional = true }
+syntex = "^0.*"
 
 [dev-dependencies]
 json_str = "^0.*"
