--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_types"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
@@ -34,7 +34,7 @@ geojson = { version = "~0.2.1", features = [ "with-serde" ] }
 elastic_date_macros = { version = "~0.2.1", optional = true }
 clippy = { version = "^0.*", optional = true }
 serde_macros = { version = "~0.7.0", optional = true }
-elastic_types_macros = { version = "*", path = "../macros/types", optional = true }
+elastic_types_macros = { version = "~0.2.1", optional = true }
 
 [build-dependencies]
 serde_codegen = { version = "^0.*", optional = true }
