--- a/hyper/Cargo.toml
+++ b/hyper/Cargo.toml
@@ -17,3 +17,6 @@ nightly-testing = [ "clippy" ]
 hyper = { version = "~0.9.0", default-features = false }
 url = "~1.1.0"
 clippy = { version = "^0.*", optional = true }
+
+[dev-dependencies]
+json_str = "^0.*"
