--- a/hyper/codegen/Cargo.toml
+++ b/hyper/codegen/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 nightly-testing = []
 
 [dependencies]
+error-chain = "*"
 aster = { version = "*" }
 elastic_codegen = { version = "*", path = "../../codegen" }
 walkdir = { version = "*" }
