--- a/macros/types/Cargo.toml
+++ b/macros/types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_types_macros"
-version = "0.2.1"
+version = "0.3.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "Compile-time code generation for Elasticsearch type implementations."
@@ -13,6 +13,7 @@ crate_type = [ "dylib" ]
 plugin = true
 
 [features]
+serde-attrs = []
 nightly-testing = [ "clippy" ]
 
 [dependencies]
