remove hyper benches

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,4 +62,4 @@ script:
       if [ -z $NO_TEST ]; then travis-cargo --only stable test; fi &&
       travis-cargo --only nightly test -- --features nightly-testing --no-default-features &&
       travis-cargo --only nightly bench -- --features nightly-testing --no-default-features &&
-      travis-cargo --only nightly doc
+      travis-cargo --only stable doc
