--- a/rotor/Cargo.toml
+++ b/rotor/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.0.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
+url = "*"
+rotor = "*"
+rotor-http = "*"
