--- a/macros/date/src/lib.rs.in
+++ b/macros/date/src/lib.rs.in
@@ -6,7 +6,7 @@ use rustc_plugin::Registry;
 use syntax::ast::Expr;
 use syntax::codemap::Span;
 use syntax::parse::token::{self};
-use syntax::ast::TokenTree;
+use syntax::tokenstream::TokenTree;
 use syntax::ptr::P;
 use syntax::ext::base::{ ExtCtxt, MacResult, DummyResult, MacEager };
 use syntax::ext::build::AstBuilder;
