--- a/rotor/Cargo.toml
+++ b/rotor/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 [dependencies]
 url = "*"
 rotor = "*"
-rotor-http = "*"
+rotor-http = { version = "*", git = "https://github.com/KodrAus/rotor-http" }
 rotor-tools = "*"
+lazy_static = "*"
 crossbeam = "*"
