--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -34,7 +34,7 @@ geojson = { version = "~0.2.1", features = [ "with-serde" ] }
 clippy = { version = "^0.*", optional = true }
 serde_macros = { version = "~0.7.0", optional = true }
 elastic_date_macros = { version = "~0.3.2", optional = true }
-elastic_types_macros = { version = "~0.3.1", optional = true }
+elastic_types_macros = { version = "*", optional = true, path = "../macros/types" }
 
 [build-dependencies]
 serde_codegen = { version = "^0.*", optional = true }
