--- a/hyper/Cargo.toml
+++ b/hyper/Cargo.toml
@@ -11,12 +11,11 @@ exclude = [ "samples", "codegen" ]
 [features]
 default = [ "ssl" ]
 ssl = [ "hyper/ssl" ]
-nightly-testing = [ "clippy" ]
+nightly-testing = [ ]
 
 [dependencies]
 hyper = { version = "~0.9.0", default-features = false }
 url = "~1.1.0"
-clippy = { version = "^0.*", optional = true }
 
 [dev-dependencies]
 json_str = "^0.*"
