--- a/hyper/samples/typed/Cargo.toml
+++ b/hyper/samples/typed/Cargo.toml
@@ -12,6 +12,6 @@ json_str = { version = "*", features = ["nightly"]}
 hyper = "~0.9.0"
 elastic_types = { version = "~0.2.1", features = ["nightly"], default-features = false }
 elastic_types_macros = "~0.3.1"
-serde = "*"
-serde_macros = "*"
-serde_json = "*"
+serde = "0.7"
+serde_macros = "0.7"
+serde_json = "0.7"
