--- a/macros/types/Cargo.toml
+++ b/macros/types/Cargo.toml
@@ -13,12 +13,10 @@ crate_type = [ "dylib" ]
 plugin = true
 
 [features]
-serde-attrs = []
-nightly-testing = [ "clippy" ]
+nightly-testing = [ ]
 
 [dependencies]
 serde = "~0.7.0"
 serde_json = "~0.7.0"
 serde_codegen_internals = { version = "~0.3.0", default-features = false }
 serde_macros = "~0.7.0"
-clippy = { version = "^0.*", optional = true }
