--- a/benches/rust/rs-es/Cargo.toml
+++ b/benches/rust/rs-es/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
-serde = "*"
-serde_json = "*"
-serde_macros = "*"
+serde = "0.7"
+serde_json = "0.7"
+serde_macros = "0.7"
 rs-es = { version = "*", default-features = false, features = [ "nightly" ] }
 stopwatch = "*"
 time = "*"
