--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -24,7 +24,7 @@ geohash = "~0.2.7"
 geojson = { version = "~0.4.0", features = [ "with-serde" ] }
 
 serde_macros = { version = "~0.8.0", optional = true }
-elastic_date_macros = { version = "~0.4.0" }
+elastic_date_macros = { version = "*", path = "../macros/date" }
 elastic_types_macros = { version = "~0.4.0", optional = true }
 
 [dev-dependencies]
