--- a/macros/date/src/lib.rs.in
+++ b/macros/date/src/lib.rs.in
@@ -55,15 +55,15 @@ pub fn plugin_registrar(reg: &mut Registry) {
 impl Formatter {
 	pub fn to_stmt(item: &Item, cx: &ExtCtxt) -> P<Expr> {
 		match *item {
-			Item::Literal(c) => 							quote_expr!(cx, chrono::format::Item::Literal($c)),
-			Item::Numeric(Numeric::Year, Pad::Zero) => 		quote_expr!(cx, chrono::format::Item::Numeric(chrono::format::Numeric::Year, chrono::format::Pad::Zero)),
-			Item::Numeric(Numeric::Month, Pad::Zero) => 	quote_expr!(cx, chrono::format::Item::Numeric(chrono::format::Numeric::Month, chrono::format::Pad::Zero)),
-			Item::Numeric(Numeric::Day, Pad::Zero) => 		quote_expr!(cx, chrono::format::Item::Numeric(chrono::format::Numeric::Day, chrono::format::Pad::Zero)),
-			Item::Numeric(Numeric::Hour, Pad::Zero) => 		quote_expr!(cx, chrono::format::Item::Numeric(chrono::format::Numeric::Hour, chrono::format::Pad::Zero)),
-			Item::Numeric(Numeric::Minute, Pad::Zero) => 	quote_expr!(cx, chrono::format::Item::Numeric(chrono::format::Numeric::Minute, chrono::format::Pad::Zero)),
-			Item::Numeric(Numeric::Second, Pad::Zero) => 	quote_expr!(cx, chrono::format::Item::Numeric(chrono::format::Numeric::Second, chrono::format::Pad::Zero)),
-			Item::Fixed(Fixed::Nanosecond3) => 				quote_expr!(cx, chrono::format::Item::Fixed(chrono::format::Fixed::Nanosecond3)),
-			_ => 											quote_expr!(cx, chrono::format::Item::Literal(""))
+			Item::Literal(c) => 							quote_expr!(cx, ::chrono::format::Item::Literal($c)),
+			Item::Numeric(Numeric::Year, Pad::Zero) => 		quote_expr!(cx, ::chrono::format::Item::Numeric(::chrono::format::Numeric::Year, ::chrono::format::Pad::Zero)),
+			Item::Numeric(Numeric::Month, Pad::Zero) => 	quote_expr!(cx, ::chrono::format::Item::Numeric(::chrono::format::Numeric::Month, ::chrono::format::Pad::Zero)),
+			Item::Numeric(Numeric::Day, Pad::Zero) => 		quote_expr!(cx, ::chrono::format::Item::Numeric(::chrono::format::Numeric::Day, ::chrono::format::Pad::Zero)),
+			Item::Numeric(Numeric::Hour, Pad::Zero) => 		quote_expr!(cx, ::chrono::format::Item::Numeric(::chrono::format::Numeric::Hour, ::chrono::format::Pad::Zero)),
+			Item::Numeric(Numeric::Minute, Pad::Zero) => 	quote_expr!(cx, ::chrono::format::Item::Numeric(::chrono::format::Numeric::Minute, ::chrono::format::Pad::Zero)),
+			Item::Numeric(Numeric::Second, Pad::Zero) => 	quote_expr!(cx, ::chrono::format::Item::Numeric(::chrono::format::Numeric::Second, ::chrono::format::Pad::Zero)),
+			Item::Fixed(Fixed::Nanosecond3) => 				quote_expr!(cx, ::chrono::format::Item::Fixed(::chrono::format::Fixed::Nanosecond3)),
+			_ => 											quote_expr!(cx, ::chrono::format::Item::Literal(""))
 		}
 	}
 }
