--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_types"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
@@ -25,7 +25,7 @@ geojson = { version = "~0.4.0", features = [ "with-serde" ] }
 
 serde_macros = { version = "~0.8.0", optional = true }
 elastic_date_macros = { version = "*", path = "../macros/date" }
-elastic_types_macros = { version = "~0.4.0", optional = true }
+elastic_types_macros = { version = "*", path = "../macros/types", optional = true }
 
 [dev-dependencies]
 json_str = "^0.*"
