--- a/hyper/samples/typed/Cargo.toml
+++ b/hyper/samples/typed/Cargo.toml
@@ -7,11 +7,11 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 nightly-testing = []
 
 [dependencies]
-elastic_hyper = "~0.3.0"
+elastic_hyper = { version = "*", path = "../../" }
 json_str = { version = "*", features = ["nightly"]}
 hyper = "~0.9.0"
-elastic_types = { version = "~0.4.0", features = ["nightly"]}
-elastic_types_macros = "~0.4.0"
+elastic_types = { version = "*", path = "../../../types", features = ["nightly"]}
+elastic_types_macros = { version = "*", path = "../../../macros/types" }
 serde = "~0.8.0"
 serde_macros = "~0.8.0"
 serde_json = "~0.8.0"
