--- a/macros/date/Cargo.toml
+++ b/macros/date/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.5.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "Compile-time code generation for chrono date formats."
-documentation = "http://kodraus.github.io/rustdoc/elastic_date_macros/"
-repository = "https://github.com/KodrAus/elasticsearch-rs"
+documentation = "https://elastic-rs.github.io/elastic_types/0.5/elastic_date_macros/"
+repository = "https://github.com/elastic-rs/elastic-types"
 
 [lib]
 name = "elastic_date_macros"
