--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.5.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
-documentation = "http://kodraus.github.io/rustdoc/elastic_types/"
+documentation = "https://elastic-rs.github.io/elastic_types/0.5/elastic_types/"
 repository = "https://github.com/elastic-rs/elastic-types"
 
 [features]
