--- a/macros/date/Cargo.toml
+++ b/macros/date/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.5.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "Compile-time code generation for chrono date formats."
-documentation = "https://elastic-rs.github.io/elastic_types/0.5/elastic_date_macros/"
+documentation = "https://docs.rs/crate/elastic_date_macros/0.5.0/elastic_date_macros"
 repository = "https://github.com/elastic-rs/elastic-types"
 
 [lib]
