--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.5.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
-documentation = "https://elastic-rs.github.io/elastic_types/0.5/elastic_types/"
+documentation = "https://docs.rs/elastic_types/0.5.0/elastic_types/"
 repository = "https://github.com/elastic-rs/elastic-types"
 
 [features]
@@ -24,8 +24,8 @@ geohash = "~0.2.7"
 geojson = { version = "~0.4.0", features = [ "with-serde" ] }
 
 serde_macros = { version = "~0.8.0", optional = true }
-elastic_date_macros = { version = "*", path = "../macros/date" }
-elastic_types_macros = { version = "*", path = "../macros/types", optional = true }
+elastic_date_macros = "~0.5.0"
+elastic_types_macros = { version = "~0.5.0", path = "../macros/types", optional = true }
 
 [dev-dependencies]
 json_str = "^0.*"
