--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ rust:
   - nightly
   - stable
 
+env:
+  global:
+    - TRAVIS_CARGO_NIGHTLY_FEATURE=""
+
 before_script:
   - |
       pip install 'travis-cargo<0.2' --user &&
