--- a/macros/types/Cargo.toml
+++ b/macros/types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_types_macros"
-version = "0.5.1"
+version = "0.5.2"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "Compile-time code generation for Elasticsearch type implementations."
@@ -17,5 +17,6 @@ nightly-testing = [ ]
 [dependencies]
 serde = "~0.8.0"
 serde_json = "~0.8.0"
-serde_codegen_internals = { version = "~0.8.0", default-features = false }
-serde_macros = "~0.8.0"
+syn = { version = "0.8", features = ["aster", "visit"] }
+quote = "0.2"
+serde_codegen_internals = { version = "~0.9.0", default-features = false }
