--- a/macros/types/Cargo.toml
+++ b/macros/types/Cargo.toml
@@ -16,6 +16,6 @@ nightly-testing = [ ]
 [dependencies]
 serde = "~0.8.0"
 serde_json = "~0.8.0"
-syn = { version = "0.8", features = ["aster", "visit", "full"] }
+syn = { version = "0.8", features = ["aster", "visit", "parsing", "full"] }
 quote = "0.2"
 serde_codegen_internals = { version = "~0.9.0", default-features = false }
