--- a/types/tests/codegen_demo/Cargo.toml
+++ b/types/tests/codegen_demo/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
 serde = "~0.8.0"
-serde_macros = "~0.8.0"
+serde_derive = "~0.8.0"
 elastic_types = { version = "*", path = "../../" }
 elastic_types_derive = { version = "*", path = "../../../macros/types" }
