--- a/macros/types/Cargo.toml
+++ b/macros/types/Cargo.toml
@@ -18,5 +18,5 @@ serde = "~0.8.0"
 serde_json = "~0.8.0"
 syn = { version = "0.9", features = ["aster", "visit", "parsing", "full"] }
 quote = "0.3"
-post-expansion = "0.0.2"
-serde_codegen_internals = { git="https://github.com/serde-rs/serde.git", branch="post", version = "~0.10.0", default-features = false }
+post-expansion = "~0.1.0"
+serde_codegen_internals = { version = "~0.10.0", default-features = false }
