--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
-name = "codegen"
+name = "elastic_codegen"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
+serde = "*"
 serde_json = "*"
+serde_derive = "*"
 syn = { version = "*", features = ["full"] }
 quote = "*"
-elastic_codegen = { version = "*", git = "https://github.com/elastic-rs/elastic-codegen" }
+Inflector = "*"
+
+[dev-dependencies]
+json_str = "*"
